--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,3 +1,3 @@
-channel.source=youtube - prod change-
-channel.name=Green Learner - prod change-
-channel.url=https://youtube.com/c/greenlearner - prod change-
+channel.source=youtube - prod -
+channel.name=Green Learner - prod -
+channel.url=https://youtube.com/c/greenlearner - prod -
